refactoring alphavantage service methods